fix: correct gap on title for chrome

--- a/src/styles/homepage_styles/homepage_section-1.scss
+++ b/src/styles/homepage_styles/homepage_section-1.scss
@@ -309,6 +309,7 @@ $introNote_AnimDelay: $introContent_AnimDelay+1200ms;
     border-top-right-radius: $borderRadius;
     height: 40dvh;
     margin: 0;
+    margin-right: -10px;
     padding-left: 2dvh;
     padding-right: 2dvh;
     text-align: center;
